# Erisu_Engine

./: CMakeLists.txt  README.md
Core/: Timer.cpp  Timer.h
Function/: MeshData.cpp  MeshData.h  main.cpp
Platform/: ErisuApp.cpp  ErisuApp.h
Platform/Input/: InputSystem.cpp  InputSystem.h
Platform/OpenGL/glad/include/glad/: glad.h
Platform/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
Platform/Shader/: GLSLShader.cpp  GLSLShader.h
Platform/Window/: OpenGLWindow.cpp  OpenGLWindow.h  Window.cpp  Window.h
Source/: include.h  main.cpp
Source/Runtime/Core/DataStruct/: OctTree.cpp  OctTree.h
Source/Runtime/Core/Global/: Global.h
Source/Runtime/Core/Log/: LogSystem.cpp  LogSystem.h
Source/Runtime/Core/MaCo/: MaCo.h
Source/Runtime/Core/Reflection/: Reflection.cpp  Reflection.h
Source/Runtime/Core/Timer/: Timer.cpp  Timer.h
Source/Runtime/Demo/: senrenbanka.cpp  senrenbanka.h
Source/Runtime/Function/2D ToolKit/Base/: AnimationBase.h  AnimationCurve.h  IAnimation.h  Renderable2DBase.cpp  Renderable2DBase.h
Source/Runtime/Function/2D ToolKit/Component/: SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
Source/Runtime/Function/2D ToolKit/Renderer/: Renderable2DBase.h  TextRenderer.cpp  TextRenderer.h
Source/Runtime/Function/Animation/: AnimationBase.h  AnimationCurve.cpp  AnimationCurve.h  IAnimation.h
Source/Runtime/Function/Animation/Javascript/: AudioClipJs.cpp  AudioClipJs.h  ColorClipJs.cpp  ColorClipJs.h  PositionClipJs.cpp  PositionClipJs.h
Source/Runtime/Function/Animation/Timeline/: AnimationClip.h  IClip.h  Timeline.cpp  Timeline.h
Source/Runtime/Function/Application/: ErisuApp.cpp  ErisuApp.h
Source/Runtime/Function/Audio/: Audio.h  AudioManager.cpp  AudioManager.h  AudioPlayer.cpp  AudioPlayer.h
Source/Runtime/Function/Audio/Base/: Audio.cpp  Audio.h
Source/Runtime/Function/Audio/KanoAudio/: Audio.cpp  Audio.h
Source/Runtime/Function/Base/: Camera.cpp  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp
Source/Runtime/Function/Base/Component/: IComponent.cpp  IComponent.h  ISortableComponent.h  MeshRenderer.h  RendererQueue.cpp  RendererQueue.h
Source/Runtime/Function/Galgame ToolKit/Struct/: GalText.h
Source/Runtime/Function/Input/: InputSystem.cpp  InputSystem.h
Source/Runtime/Function/Object/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  Scene.h  Transform.h
Source/Runtime/Function/Render/: GLRenderer.cpp  GLRenderer.h  GLTexture.cpp  GLTexture.h  PostProcessBase.cpp  PostProcessBase.h
Source/Runtime/Function/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
Source/Runtime/Function/Shader/: GLSLShader.cpp  GLSLShader.h
Source/Runtime/Function/Utility/: ImGuiUtility.cpp  ImGuiUtility.h  PythonModule.cpp  PythonModule.h
Source/Runtime/Resource/: ResourceManager.cpp  ResourceManager.h
Source/Runtime/Resource/ModelImport/: ModelImport.cpp  ModelImport.h
Source/Runtime/UserComponent/: TestComponent.cpp  TestComponent.h
Source/Scripts/: init.py  main.js  main_scene.js  start_scene.js  test.js
(+101 files in other folders)
